# labrador

./: Cargo.toml  LICENSE-MIT  README.md  README_CN.md
src/: client.rs  errors.rs  lib.rs  request.rs  session.rs
src/alipay/: constants.rs  method.rs  mod.rs
src/alipay/request/: mod.rs
src/alipay/response/: mod.rs
src/jd/: constants.rs  method.rs  mod.rs
src/jd/request/: mod.rs
src/jd/response/: mod.rs
src/pdd/: method.rs  mod.rs
src/pdd/request/: mod.rs
src/pdd/response/: mod.rs
src/qiniu/: mod.rs
src/taobao/: constants.rs  method.rs  mod.rs
src/taobao/request/: mod.rs
src/taobao/response/: mod.rs
src/util/: md5.rs  mod.rs  prp.rs  xmlutil.rs
src/wechat/: constants.rs  mod.rs  msg_parser.rs
src/wechat/cp/: constants.rs  method.rs  mod.rs  msg_parser.rs  msg_router.rs
src/wechat/cp/api/: agent.rs  codesession.rs  department.rs  external_contact.rs  group_robot.rs  media.rs  menu.rs  message.rs  mod.rs  oauth2.rs  tag.rs  user.rs
src/wechat/cp/events/: app_admin.rs  approval.rs  auth.rs  auto_activate.rs  batch_job_result.rs  contact_change.rs  customer.rs  enter_agent.rs  licecnse_pay_success.rs  licecnse_refund.rs  location.rs  menu.rs  mod.rs  permanent_code.rs  share_agent.rs  share_chain.rs  subscribe.rs  template_card.rs  ticket.rs  tp_contact_change.rs  unlicensed.rs  unsubscribe.rs
src/wechat/cp/messages/: image.rs  link.rs  location.rs  mod.rs  text.rs  unknown.rs  video.rs  voice.rs
src/wechat/cp/replies/: articles.rs  image.rs  mod.rs  template_card.rs  text.rs  update_button.rs  video.rs  voice.rs
src/wechat/cp/tp/: agent.rs  auth.rs  department.rs  license.rs  media.rs  mod.rs  order.rs  tag.rs  user.rs
src/wechat/cryptos/: mod.rs
src/wechat/miniapp/: constants.rs  method.rs  mod.rs
src/wechat/miniapp/api/: codesession.rs  (+5 more)
src/wechat/mp/: constants.rs  method.rs  mod.rs  msg_parser.rs
src/wechat/pay/: constants.rs  method.rs  mod.rs
(+46 files in other folders)
