[package]
name = "labrador"
version = "0.1.10"
authors = ["mrpan <1049058427@qq.com>"]
edition = "2018"
description = "Labrador - Mini thirdpart client for rust."
readme = "README.md"
keywords = ["alipay", "wechat", "jd", "taobao", "pdd"]
categories = ["api-bindings"]
homepage = "https://github.com/wslongchen/labrador"
repository = "https://github.com/wslongchen/labrador"
documentation = "https://docs.rs/labrador"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.21.0", features = ["r2d2"]}
reqwest = { version = "0.11.0", features = ["blocking", "json","native-tls","__rustls", "native-tls-crate", "multipart"] }
bytes = { version = "1.1.0", features = ["serde"] }
bincode = "1.3.3"
r2d2 = {version = "0.8.9"}
chrono = { version = "0.4", features = ["serde"]}
base64 = "0.12"
rand = "0.7.3"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
byteorder = {version = "1.3.4"}
sxd-document = {version = "0.2", optional= true}
sxd-xpath = {version = "0.2", optional= true}
rustc-serialize = "^0.3"
serde_urlencoded = "0.7.1"
urlencoding = "2.1.0"
openssl = { version = "0.10.41", features = ["vendored"] }
tracing = "0.1"
dashmap = "5.3.4"
json = {version = "0.12.4", optional= true }
once_cell = "1.8"
[dev-dependencies]
tokio = { version = "1",  features=["full"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--cfg",
    "docsrs"
]
### FEATURES #################################################################

[features]

# Provide wechat
wechat = [ "sxd-document", "sxd-xpath"]
# Provide alipay
alipay = [ "json"]
# Provide taobao
taobao = []
# Provide pinduoduo
pdd = []
# Provide jingdong
jd = []
